@@ -1,4 +1,4 @@
 ifeq ($(subdir),math)
 libm-sysdep_routines += s_floor-c s_ceil-c s_floorf-c s_ceilf-c \
-			s_rint-c s_rintf-c
+			s_rint-c s_rintf-c s_nearbyint-c s_nearbyintf-c
 endif
